HIVE-27944: Possible deadlock in HIVE-LLAP when reading  location-based Iceberg tables (#5934)